# viia

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_release.ps1  diff.txt  diff2.txt  dist-workspace.toml
logo/: logo.pptm
src/: main.rs
viia/: Cargo.toml  build.rs  icon.rc
viia-core/: Cargo.toml
viia-core/src/: cache.rs  cache_tests.rs  image_loader.rs  internal_shell.rs  lazy_decoder.rs  lib.rs  media_url.rs  resizer.rs  resizer_tests.rs  sftp_transport.rs  slideshow_parser.rs  source_access.rs  source_resolver.rs  state_machine.rs  test_clap.rs
viia-gui/: Cargo.toml  build.rs  tauri.conf.json
viia-gui/capabilities/: default.json
viia-gui/icons/: icon.icns
viia-gui/src/: lib.rs
viia-tui/: Cargo.toml
viia-tui/src/: lib.rs
viia/src/: cli.rs  headless.rs  lib.rs
viia/wix/: main.wxs
