[workspace.package]
version = "0.1.2"

[workspace]
members = [
    "viia",
    "viia-core",
    "viia-tui",
    "viia-gui"
, "agents-test/lazy-decode-poc"]
default-members = [
    "viia",
    "viia-core",
    "viia-tui"
]
resolver = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
