[package]
name = "viia-core"
version.workspace = true
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
fast_image_resize = { version = "6.0.0", features = ["rayon"] }
image = { version = "0.25.10", features = ["gif", "jpeg", "png", "webp"] }
moka = { version = "0.12.15", features = ["sync"] }
regex = "1.12.3"
shlex = "1.3.0"
thiserror = "2.0.18"
tracing = "0.1.44"
url = "2.5.7"

[dev-dependencies]
tempfile = "3.27.0"
