[package]
name = "viia-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
viia-core = { path = "../viia-core" }
tauri = { version = "2.0.0", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.44"
base64 = "0.22.1"
image = { version = "0.25.10", features = ["gif", "jpeg", "png", "webp"] }
clap = "4.6.0"

[build-dependencies]
tauri-build = "2.0.0"
chrono = "0.4"
ico = "0.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }
